--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new year offer </title>
+    <link rel="stylesheet" href="style/offer.css">
 </head>
 <body>
-    <header>
+    <header class="banner">
+        <div class="banner-party">
+            <p>Happy new year</p>
+            <h2>New year party</h2>
+            <h3> celebration</h3>
+        </div>
 
+    </header>
+    <header class="images">
+        <div class="text-title">
+            <h2><span class="text-primary">65% OFF</span></h2>
+            <p><span class="text-primary">OUR HOLIDAY DEALS ARE BETTER</span></p>
+            <h3 class="cataghori">ALL CATEGORIES</h3>
+
+        </div>
+        <img src="images/New Year Photo.png" alt="">
+    </header>
+    <header class="banner-images">
+        <div class="new-year-banner">
+            <h2>Welcome to<br>midnight party</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <h5>Join Now</h5>
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
