--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
     </header>
     <header class="banner-images">
         <div class="new-year-banner">
-            <h2>Welcome to<br>midnight party</h2>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            <h5>Join Now</h5>
+            <h2> <span class="text-colur">welcome  to<br>midnight party</span></h2>
+            <p> <span class="text-colur"> sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <h5>Join Now </span></h5>
+        </div>
+          <img src="images/Group 70.png" alt=""> 
+    </header>
+    <header class="background">
+        <div class="background-color">
+            <h3><span class="text-primary">Place:</span> New Park Hotel</h3>
+            <h3><span class="text-primary">Date:</span> 31 December Night 2023</h3>
+            <h3><span class="text-primary">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+            <a href=""><button class="btn-primary">Join Now</button></a>
         </div>
     </header>
     <main>
